third_party/move/move-compiler-v2/tests/checking/naming/standalone_mname.exp

Diagnostics:
error: undeclared `M::M`
  ┌─ tests/checking/naming/standalone_mname.move:3:17
  │
3 │         let m = M;
  │                 ^
